--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Navigation -->
+    <nav id="nav">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
+    </nav>
+    <!-- Home Section -->
+    <section id="home">
+        <div class="title-group">
+            <h1>Maybee Dark Mode</h1>
+            <h2>Welcome to the Website!</h2>
+        </div>
+    </section>
+    <!-- About Section -->
+    <section id="about">
+        <h1>Undraw Illustrations</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>Web Innovation</h2>
+                <img src="" alt="" id="image1">
+            </div>
+        </div>
+    </section>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h1>Buttons</h1>
+    </section>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h3>CONTACT</h3>
+    </section>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
