--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Dark Mode Switch -->
+    <div class="theme-switch-wrapper">
+        <span id="toggle-icon">
+            <span class="toggle-text">Light Mode</span>
+            <i class="fas fa-sun"></i>
+        </span>
+        <label class="theme-switch">
+            <input type="checkbox">
+            <div class="slider round"></div>
+        </label>
+    </div>
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">HOME</a>
@@ -29,17 +40,40 @@
         <div class="about-container">
             <div class="image-container">
                 <h2>Web Innovation</h2>
-                <img src="" alt="" id="image1">
+                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>Problem Solving</h2>
+                <img src="img/undraw_feeling_proud_light.svg" alt="Proud Coder" id="image2">
+            </div>
+            <div class="image-container">
+                <h2>High Concept</h2>
+                <img src="img/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
             </div>
         </div>
     </section>
     <!-- Projects Section -->
     <section id="projects">
         <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ipsa maxime obcaecati minus architecto! Saepe, nobis unde, natus officiis ea cupiditate possimus rerum culpa sed quaerat libero necessitatibus. Quo, soluta.</p>
+        </div>
     </section>
     <!-- Contact Section -->
     <section id="contact">
-        <h3>CONTACT</h3>
+        <div class="social-icons">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-linkedin-in"></i>
+        </div>
+        <h2>john.d.maybee@gmail.com</h2>
     </section>
     <!-- Script -->
     <script src="script.js"></script>
